--- a/components/payIn/table/index.module.css
+++ b/components/payIn/table/index.module.css
@@ -54,9 +54,10 @@
 
 .type {
   text-align: left;
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   gap: 0px;
 }
 
