wip: render JSON as JSX via RenderMan (experimental), mentions support, re-introduce usage of Lexical in read mode

--- a/components/lexical/styles/theme.module.css
+++ b/components/lexical/styles/theme.module.css
@@ -160,6 +160,12 @@
     position: relative;
 }
 
+.mention {
+    color: var(--theme-color);
+    background-color: var(--theme-body);
+    font-weight: bold;
+}
+
 /* inline blocks */
 
 .link {
