--- a/components/lexical/styles/theme.module.css
+++ b/components/lexical/styles/theme.module.css
@@ -323,3 +323,19 @@
     border-top: 1px solid var(--theme-borderColor);
     margin: 8px 0;
 }
+
+.twitterContainer {
+    position: relative;
+    overflow: hidden;
+    background-color: var(--theme-body) !important;
+}
+
+.twitter {
+    position: relative;
+    overflow: hidden;
+    background-color: transparent;
+}
+
+.twitter iframe {
+    border-radius: 13px;
+}
