correct background color for contenteditable=false by default

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -455,6 +455,14 @@ div[contenteditable],
   border-color: var(--theme-borderColor);
 }
 
+select,
+div[contenteditable="false"],
+.form-control {
+  background-color: var(--theme-body) !important;
+  color: var(--bs-body-color) !important;
+  border-color: var(--theme-borderColor) !important;
+}
+
 .form-group {
   margin-bottom: 1rem;
 }
