Territory mentions support, links in a new tab, continue 1:1 styling, fix markdownmode-lexical conversion on formik, ssr HTML gen tweaks

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -30,3 +30,8 @@
 .content form {
     width: 100%;
 }
+
+/* special case for post creation, 1:1 width editor-resulting post */
+.content:has(form [contenteditable="true"]) {
+    max-width: 850px !important;
+}
