--- a/styles/text.scss
+++ b/styles/text.scss
@@ -43,9 +43,10 @@ span.sn__mediaContainer {
 
 .sn__mediaContainer img,
 .sn__mediaContainer video {
-  max-width: 100%;
+  max-width: var(--max-width);
   display: block;
   cursor: default;
+  aspect-ratio: var(--aspect-ratio);
 }
 
 [contenteditable="false"] .sn__mediaContainer img {
