--- a/components/link-to-context.module.css
+++ b/components/link-to-context.module.css
@@ -35,7 +35,8 @@
 .linkBoxParent iframe,
 .linkBoxParent video,
 .linkBoxParent pre,
-.linkBoxParent img {
+.linkBoxParent img,
+.linkBoxParent .accordion {
     pointer-events: auto !important;
 }
 
