restructure components/lexical, remove some unused code, tweaks to toolbar styling

--- a/components/lexical/theme/theme.module.css
+++ b/components/lexical/theme/theme.module.css
@@ -202,6 +202,10 @@
   margin: 0 4px;
 }
 
+:global(.dropdown) + .divider {
+  margin-left: 0 !important;
+}
+
 .toolbar .toolbarFormatting {
   display: flex;
   align-items: center;
