--- a/components/lexical/theme/theme.module.css
+++ b/components/lexical/theme/theme.module.css
@@ -350,3 +350,23 @@
   margin-top: 3px;
   margin-right: 0.25rem;
 }
+
+.skeleton .otherItem {
+  display: inline-flex;
+  width: 100%;
+  height: 100%;
+  border-radius: .27rem;
+  background-size: 200% 100%;
+  animation: shimmer 4s infinite linear;
+  margin-bottom: .5rem;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
+
